--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ async-timeout==3.0.1
 attrs==20.3.0
 black==20.8b1
 certifi==2020.12.5
-chardet==3.0.4
+chardet==4.0.0
 click==7.1.2
 colorama==0.4.4
 discord==1.0.1
@@ -17,7 +17,9 @@ lazy-object-proxy==1.4.3
 mccabe==0.6.1
 multidict==5.1.0
 mypy-extensions==0.4.3
+mysql-connector-python==8.0.22
 pathspec==0.8.1
+protobuf==3.14.0
 pylint==2.6.0
 python-dotenv==0.15.0
 regex==2020.11.13
