--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ async-timeout==3.0.1
 attrs==20.3.0
 black==20.8b1
 certifi==2020.12.5
-chardet==4.0.0
+chardet==3.0.4
 click==7.1.2
 colorama==0.4.4
 discord==1.0.1
@@ -14,6 +14,7 @@ idna==2.10
 isort==5.7.0
 jsonpickle==1.4.2
 lazy-object-proxy==1.4.3
+#mariadb==1.0.5
 mccabe==0.6.1
 multidict==5.1.0
 mypy-extensions==0.4.3
