--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ pathspec==0.8.1
 protobuf==3.14.0
 pylint==2.6.0
 python-dotenv==0.15.0
+pytz==2020.5
 regex==2020.11.13
 requests==2.25.1
 six==1.15.0
