--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# ignoring this as it's a 15mb json file
+# only needed when I want to examine wow api AH output
+devstuff/ahdata.json
 
 
 # Byte-compiled / optimized / DLL files
