--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,12 @@ certifi==2020.12.5
 chardet==3.0.4
 click==7.1.2
 colorama==0.4.4
-discord==1.0.1
 discord.py==1.6.0
 idna==2.10
 isort==5.7.0
+jsonpickle==1.4.2
 lazy-object-proxy==1.4.3
+mariadb==1.0.5
 mccabe==0.6.1
 multidict==5.1.0
 mypy-extensions==0.4.3
