--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,6 @@ six==1.15.0
 toml==0.10.2
 typed-ast==1.4.2
 typing-extensions==3.7.4.3
-urllib3==1.26.2
+urllib3>=1.26.5
 wrapt==1.12.1
 yarl==1.6.3
