--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,33 @@
-aiohttp==3.7.4.post0
+aiohttp>=3.7.4
 appdirs==1.4.4
+astroid==2.4.2
 async-timeout==3.0.1
-attrs==21.2.0
+attrs==20.3.0
 black==20.8b1
-chardet==4.0.0
+certifi==2020.12.5
+chardet==3.0.4
 click==7.1.2
-discord==1.7.3
-discord.py==1.7.3
-idna==3.2
+colorama==0.4.4
+discord.py>=1.7.3
+idna==2.10
+isort==5.7.0
+jsonpickle==1.4.2
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
 multidict==5.1.0
 mypy-extensions==0.4.3
+mysql-connector-python==8.0.22
 pathspec==0.8.1
+protobuf==3.14.0
+pylint==2.6.0
+python-dotenv==0.15.0
 pytz==2020.5
 regex==2020.11.13
+requests==2.25.1
+six==1.15.0
 toml==0.10.2
 typed-ast==1.4.2
 typing-extensions==3.7.4.3
+urllib3>=1.26.5
+wrapt==1.12.1
 yarl==1.6.3
