--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ multidict==5.1.0
 mypy-extensions==0.4.3
 mysql-connector-python==8.0.22
 pathspec==0.8.1
-protobuf==3.14.0
+protobuf>=3.15.0
 pylint==2.6.0
 python-dotenv==0.15.0
 pytz==2020.5
